bluec-tests/tests/invalid/types_void/assign_to_void_lvalue.c
extern void *x;

void foo(void) { return; }

int main(void) {
  *x = foo();
  return 0;
}